test/error/type/err4.rzy
Weekday = Enum
  Monday;
  Tuesday;
  Wednesday;
  Thursday;
  Friday;
  Saturday;
  Sunday;
end

Err4 = Component
  foo : slot( x: Weekday );

elementary
  foo : slot( x: Weekday )
    bar( x );
  end

  bar = procedure( x: R{0,10} )
  end

end

